tests/NormalTests/paczka1/fuzzy1/29028187.err
Error in line 1: A58 S294 96,9
Error in line 2: A58 A58 91,3
Error in line 4: aDR3ua A58 3,7
Error in line 5: A58 S294 51,0
Error in line 18: eNQpUlN450 S194 45,4
Error in line 26: aDR3ua A58 33,3
